<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>webswing</artifactId>
        <groupId>org.webswing</groupId>
        <version>2.6-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <dependencies>
        <dependency>
            <groupId>org.webswing</groupId>
            <artifactId>webswing-app-toolkit</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
    </dependencies>

    <artifactId>webswing-app-toolkit-java9</artifactId>

    <build>
        <finalName>webswing-app-toolkit-java9</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <compilerArgs>
                        <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/sun.awt.dnd=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/sun.awt.dnd.peer=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/sun.nio.cs=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/java.awt.dnd=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.desktop/sun.print=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>